force-app/main/default/objects/Errors__c/Errors__c.object-meta.xml
<CustomObject>
    <label>Errors</label>
    <nameField>
        <displayFormat>EN-{0000}</displayFormat>
        <label>Errors Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>