force-app/main/default/objects/Errors__c/fields/Error_Log__c.field-meta.xml
<CustomField>
    <fullName>Error_Log__c</fullName>
    <label>Error Log</label>
    <referenceTo>Error_Log__c</referenceTo>
    <relationshipLabel>Errors</relationshipLabel>
    <relationshipName>Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>