force-app/main/default/objects/Errors__c/fields/Fields_Affected__c.field-meta.xml
<CustomField>
    <fullName>Fields_Affected__c</fullName>
    <inlineHelpText>If there are validation or required fields this fields will be populated with the name of the fields</inlineHelpText>
    <label>Fields Affected</label>
    <length>255</length>
    <type>Text</type>
</CustomField>