force-app/main/default/objects/Errors__c/fields/RAW_Error_Exception__c.field-meta.xml
<CustomField>
    <fullName>RAW_Error_Exception__c</fullName>
    <inlineHelpText>This gives the actual error/exception message faced in code.</inlineHelpText>
    <label>RAW Error/Exception</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>