force-app/main/default/objects/Errors__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <inlineHelpText>Status code from error/exception</inlineHelpText>
    <label>Status Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>