force-app/main/default/objects/Errors__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Log__c</columns>
    <columns>Error_Message__c</columns>
    <columns>Row_Number__c</columns>
    <columns>Fields_Affected__c</columns>
    <columns>Line_Number__c</columns>
    <columns>RAW_Error_Exception__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Status_Code__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>