force-app/main/default/objects/Errors__c/listViews/LAST_2_DAYS.listView-meta.xml
<ListView>
    <fullName>LAST_2_DAYS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Error_Log__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>LAST_N_DAYS:2</value>
    </filters>
    <label>LAST 2 DAYS</label>
</ListView>